Update circleci configuration.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,11 @@ jobs:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
 
+      - run:
+          name: Create artifacts folder
+          command: |
+            mkdir /tmp/artifacts;
+
       # run tests!
       - run:
           name: run tests
