nn and weighted-average

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 *.cpython-37.pyc
 /copper/__pycache__/
+.idea/
+.ipynb_checkpoints/
+__pycache__/
+_summary.ipynb
+aggregate_test.py
+base_positive_displacement.pkl
+copper/.idea/
+criteria.py
+curvesElectricEIRChiller_Trane_CVHE_1080kW_7.39COP_Vanes.idf
+docs/build/doctrees/
+docs/build/html/
+test-01.py
+test_algorithm.py
+test_curves.py
+tests/.ipynb_checkpoints/
+tests/_tests.ipynb
+tests/test_aowabin.py
+venv/
+
