Use new function in calc_rated_eff.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
       - run:
           name: run tests
           command: |
+            export PYTHONUNBUFFERED=1
             . venv/bin/activate
             nosetests
           no_output_timeout: 10h
