--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/setup-python@v2
       - name: Install dependencies
         run: |
-          pip install sphinx
+          pip install sphinx sphinx-rtd-theme
       - name: Sphinx build
         run: |
           sphinx-build docs/source build
