--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,9 +6,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
-      - name: Install dependencies
+      - name: Install documentation dependencies
         run: |
           pip install sphinx sphinx-rtd-theme
+    - name: Install general dependencies
+        run: python -m venv ./.venv && . ./.venv/bin/activate && 
+           pip install -r requirements.txt
+        if: steps.cache-venv.outputs.cache-hit != 'true'
       - name: Sphinx build
         run: |
           sphinx-build docs/source build
