--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,8 +10,8 @@ jobs:
         run: |
           pip install sphinx sphinx-rtd-theme
     - name: Install general dependencies
-        run: python -m venv ./.venv && . ./.venv/bin/activate && 
-           pip install -r requirements.txt
+        run:  |
+          python -m venv ./.venv && . ./.venv/bin/activate && pip install -r requirements.txt
         if: steps.cache-venv.outputs.cache-hit != 'true'
       - name: Sphinx build
         run: |
