Attempt to restart tests.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,6 @@ jobs:
         black -l 88 copper tests --check
     - name: Tests with Nose
       run: |
-        export PYTHONUNBUFFERED=1
-        . ./.venv/bin/activate
+#        export PYTHONUNBUFFERED=1
+#        . ./.venv/bin/activate
         nosetests -v
