--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
         pip install -r requirements.txt
     - name: Install Black
       run: |
-        sudo pip install black
+        sudo pip install black==22.12.0
     - name: Run Black
       run: |
         black -l 88 copper tests --check
