--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,10 +10,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
       - name: Update pip and install python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[dev]
+          poetry install
       - name: Install documentation dependencies
         run: |
           pip install sphinx sphinx-rtd-theme
