--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ numpy = "^2.0.1"
 matplotlib = "^3.9.1"
 pandas = "^2.2.2"
 statsmodels = "^0.14.2"
-coolprop = "^6.6.0"
+CoolProp = "^6.6.0"
 scipy = "^1.14.0"
 click = "^8.1.7"
 jsonschema = "^4.23.0"
