--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
           pip install sphinx sphinx-rtd-theme
       - name: Sphinx build
         run: |
-          sphinx-build docs/source build
+          poetry run sphinx-build docs/source build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
