--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Update pip and install python dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -e .[dev]
           poetry install
       - name: Install documentation dependencies
         run: |
